Real Analysis MIT 18100A: review and update notes

--- a/Real-Analysis-MIT-18100A/Exercises.tex
+++ b/Real-Analysis-MIT-18100A/Exercises.tex
@@ -1,10 +1,18 @@
 \documentclass[12pt, letterpaper, oneside]{book}
+\usepackage{amsfonts}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{csquotes}
 \usepackage{empheq}
 \usepackage{float}
+\usepackage{hyperref}
 \usepackage[letterpaper, textwidth=7.5in, textheight=8in]{geometry}
+\hypersetup{
+  colorlinks=true,
+  linkcolor=blue,
+  filecolor=magenta,
+  urlcolor=blue,
+}
 \usepackage{parskip}
 \usepackage{pseudocode}
 \usepackage{xcolor}
@@ -34,8 +42,19 @@
 \subsection{Exercise 1.1.1}
 % ******************************
 
-\textbf{Proof}: This exercise requires to prove part (iii) of Proposition 1.1.8. That means I can make use of part (i)
-and part (ii) in Proposition 1.1.8. The proof steps are as follows:
+% ------------------------------
+\subsubsection{Description}
+% ------------------------------
+
+Prove part (iii) of Proposition 1.1.8. That is, let $F$ be an ordered field and $x, y, z \in F$. Prove: If $x < 0$ and
+$y < z$, then $xy > xz$.
+
+% ------------------------------
+\subsubsection{Proof}
+% ------------------------------
+
+This exercise requires to prove part (iii) of Proposition 1.1.8. That means I can make use of part (i) and part (ii) in
+Proposition 1.1.8. The proof steps are as follows:
 \begin{itemize}
   \item (a) $\because x < 0, \therefore (-x) > 0, \therefore (-x)y < (-x)z$ (Proposition 1.1.8 (i), (ii))
   \item (b) $\because (-x)y < (-x)z, \therefore (-x)y + xy < (-x)z + xy$ (Definition 1.1.7 (i))
@@ -48,6 +67,8 @@ and part (ii) in Proposition 1.1.8. The proof steps are as follows:
         (A2), (A3), (A4))
   \item (h) $\therefore xz < xy; \therefore xy > xz$ ((f), (g))
 \end{itemize}
+
+$\blacksquare$
 
 % ******************************
 \subsection{Exercise 1.1.2}
@@ -190,14 +211,26 @@ $\blacksquare$
 \subsection{Exercise 1.1.3}
 % ******************************
 
-\textbf{Proof}:
-\begin{itemize}
-  \item (a) $\because x > 0 \land x < y$, $\therefore xx < xy$ (Proposition 1.1.8 (ii))
-  \item (b) $\because y > 0 \land x < y$, $\therefore yx < yy$ (Proposition 1.1.8 (ii))
-  \item (c) $xy = yx$ (Definition 1.1.5 (M2))
-  \item (d) $\because xx < xy \land xy = yx \land yx < yy$, $\therefore xx < yy$ (Definition 1.1.1 (ii))
-  \item (e) Denote $xx$ as $x^2$ and $yy$ as $y^2$, we have $x^2 < y^2$.
-\end{itemize}
+% ------------------------------
+\subsubsection{Description}
+% ------------------------------
+
+Prove part (vi) of Proposition 1.1.8. That is, let $x, y \in F$, where $F$ is an ordered field, such that $0 < x < y$.
+Show that $x^2 < y^2$.
+
+% ------------------------------
+\subsubsection{Proof}
+% ------------------------------
+
+\begin{enumerate}
+  \item[(a)] $\because x > 0 \land x < y$, $\therefore xx < xy$ (Proposition 1.1.8 (ii))
+  \item[(b)] $\because y > 0 \land x < y$, $\therefore yx < yy$ (Proposition 1.1.8 (ii))
+  \item[(c)] $xy = yx$ (Definition 1.1.5 (M2))
+  \item[(d)] $\because xx < xy \land xy = yx \land yx < yy$, $\therefore xx < yy$ (Definition 1.1.1 (ii))
+  \item[(e)] Denote $xx$ as $x^2$ and $yy$ as $y^2$, we have $x^2 < y^2$.
+\end{enumerate}
+
+$\blacksquare$
 
 % ******************************
 \subsection{Exercise 1.1.4}
@@ -309,6 +342,9 @@ long as we can find/construct one countably infinite subset, we are done. To fin
 need to prove the following lemma:
 
 \textbf{Lemma 1.1.6 (A)}: $\forall x \in A, \exists y \in A. (x \ne y \land x < y < sup A)$.
+
+In other words, the lemma means: Given any $x$ in $A$, we can always find another element in $A$ that sits between $x$
+and $supA$ and is different from both of them.
 
 For the sake of contradiction, assume $\exists x_0 \in A, \lnot \exists y \in A. (x_0 \ne y \land x_0 < y < sup A)$. In
 other words, $\forall y \in A. (y \leqslant x_0)$. According to Definition 1.1.2, $x_0$ is an upper bound of $A$. This
